Добавил теги section

--- a/index.html
+++ b/index.html
@@ -9,45 +9,55 @@
 </head>
 
 <body>
-    <img src="img/logo.jpg" alt="logo">
-    <div>
-        <h1>Вступление</h1>
-        <p>
-            Это текст моего первого домашнего задания. <br>
-            Не верится, но мне уже удаётся писать свой первый код на HTML.
-        </p>
-    </div>
-    <div>
-        <h2>Что дальше?</h2>
-        <p>
-            Дальше, я буду получать всё больше и больше опыта в разработке сайтов, чтобы достичь новых вершин! <a
-                href="https://www.google.ru" target="_blank" title="Google">Прочитать в Google.</a>
-        </p>
-    </div>
-    <div>
-        <h2>Что я буду уметь?</h2>
-        <p>
-            Я смогу создавать во такие замечательные формы.
-        </p>
-        <form action="#">
-            <input type="text" name="name" placeholder="Имя" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="tel" name="phone" placeholder="Телефон" required>
-            <button type="submit">Отправить данные</button>
-        </form>
-    </div>
-    <div>
-        <h5>А так же я гаучусь создавать списки:</h5>
-        <ul>
-            <li>С одним пунктом</li>
-            <li>С несколькими пунктами</li>
-            <li>И даже с тремя отдельными пунктами</li>
-        </ul>
-    </div>
-    <h2>Отличное начало!</h2>
-    <a href="https://wayup.in/cabinet/course10-2-wave/unit1/lesson1" target="_blank">Перейти на страницу первого занятия
-        курса.</a>
-
+    <header>
+        <img src="img/logo.jpg" alt="logo">
+        <div>
+            <h1>Вступление</h1>
+            <p>
+                Это текст моего первого домашнего задания.
+            </p>
+            <p>
+                Не верится, но мне уже удаётся писать свой первый код на HTML.
+            </p>
+        </div>
+    </header>
+    <section>
+        <div>
+            <h2>Что дальше?</h2>
+            <p>
+                Дальше, я буду получать всё больше и больше опыта в разработке сайтов, чтобы достичь новых вершин! <a
+                    href="https://www.google.ru" target="_blank" title="Google">Прочитать в Google.</a>
+            </p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h2>Что я буду уметь?</h2>
+            <p>
+                Я смогу создавать во такие замечательные формы.
+            </p>
+            <form action="#">
+                <input type="text" name="name" placeholder="Имя" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="tel" name="phone" placeholder="Телефон" required>
+                <button type="submit">Отправить данные</button>
+            </form>
+        </div>
+        <div>
+            <h5>А так же я научусь создавать списки:</h5>
+            <ul>
+                <li>С одним пунктом</li>
+                <li>С несколькими пунктами</li>
+                <li>И даже с тремя отдельными пунктами</li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <h2>Отличное начало!</h2>
+        <a href="https://wayup.in/cabinet/course10-2-wave/unit1/lesson1" target="_blank">Перейти на страницу первого
+            занятия
+            курса.</a>
+    </footer>
 </body>
 
 </html>
